Name:                mixpanel
Version:             0.1.6.2
Synopsis: Haskell library for Mixpanel HTTP API.

Description:
  Haskell library for Mixpanel HTTP API.

License:             BSD3
License-file:        LICENSE
Author:              Scrive
Maintainer:          eric@scrive.com
Stability:           Development
Category:            API
Build-type:          Simple
Cabal-version:       >=1.6


library
  exposed-modules:
    Mixpanel.Engage,
    Mixpanel.Event,
    Mixpanel.Properties,
    Mixpanel.Result

  hs-source-dirs: src
  Build-depends: Crypto >= 4.2.0
  build-depends: base >= 4 && < 6
  Build-depends: time
  Build-depends: HTTP >= 4000.0
  Build-depends: http-client >= 0.6.1
  Build-depends: http-client-tls >= 0.3.5.3
  Build-depends: http-conduit >= 2.3.5
  build-depends: containers
  build-depends: base64-bytestring >= 0.1.0.2
  build-depends: utf8-string  >= 0.3.6
  Build-depends: network >= 2.3.0.11
  Build-depends: parsec >= 3.1.1
  Build-depends: mtl >= 2.0.0
  Build-depends: random
  Build-depends: unix
  Build-depends: bytestring
  Build-depends: process
  Build-depends: json >= 0.5
  Build-depends: fields-json >= 0.2
  Build-depends: temporary >= 1.1.2.3
  extensions:    FlexibleInstances,
                 TypeSynonymInstances,
                 UndecidableInstances,
                 OverlappingInstances,
                 IncoherentInstances,
                 DeriveFunctor,
                 GeneralizedNewtypeDeriving,
                 MultiParamTypeClasses,
                 StandaloneDeriving,
                 ScopedTypeVariables,
                 RecordWildCards
