Name:                mixpanel
Version:             0.1.6.3
Synopsis: Haskell library for Mixpanel HTTP API.

Description:
  Haskell library for Mixpanel HTTP API.

License:             BSD3
License-file:        LICENSE
Author:              Scrive
Maintainer:          eric@scrive.com
Stability:           Development
Category:            API
Build-type:          Simple
Cabal-version:       >=1.6


library
  exposed-modules: Mixpanel.Engage
                   Mixpanel.Event
                   Mixpanel.Properties
                   Mixpanel.Result

  hs-source-dirs: src

  build-depends: base >= 4 && < 6
               , base64-bytestring >= 0.1.0.2
               , fields-json >= 0.2
               , http-client >= 0.6.1
               , http-client-tls >= 0.3.5.3
               , http-conduit >= 2.3.5
               , json >= 0.5
               , process
               , time
               , utf8-string >= 0.3.6
